syntax = "proto3";

package pb;

option go_package = "../pb";

message RegisterReq {
  string username = 1;
  string password = 2;
  CaptchaReq captcha = 3;
  string phone = 4;
  string promotion = 5;
  string code = 6;
  string country = 7;
  string superPartner = 8;
}

message CaptchaReq {
  string server = 1;
  string token = 2;
}

message RegisterResp {}

service usercenter {
  rpc register(RegisterReq) returns(RegisterResp);
}